# sonic

./: CMakeLists.txt  check_list  estructura_servidor_cliente
archivos/: cliente.json  escenario.json  escenario2.json  servidor.json
archivos/default/: default.json
modelo/: main.cpp
modelo/clases/headers/: Anillo.h  Bonus.h  Cangrejo.h  Capa.h  Circulo.h  Configuracion.h  Constantes.h  Dibujable.h  Enemigo.h  EnemigoFinal.h  Entidad.h  Escenario.h  Escudo.h  Fuego.h  Invincibilidad.h  Juego.h  JuegoCliente.h  JuegoServidor.h  Log.h  Mosca.h  Nivel.h  Parser.h  ParserClienteServidor.h  Pece.h  Personaje.h  Piedra.h  Pinche.h  Rectangulo.h  Ring.h  Ventana.h
modelo/clases/src/: Anillo.cpp  Bonus.cpp  Cangrejo.cpp  Capa.cpp  Circulo.cpp  Configuracion.cpp  Dibujable.cpp  Enemigo.cpp  EnemigoFinal.cpp  Entidad.cpp  Escenario.cpp  Escudo.cpp  Fuego.cpp  Invincibilidad.cpp  Juego.cpp  JuegoCliente.cpp  JuegoServidor.cpp  Log.cpp  Mosca.cpp  Nivel.cpp  Parser.cpp  ParserClienteServidor.cpp  Pece.cpp  Personaje.cpp  Piedra.cpp  Pinche.cpp  Rectangulo.cpp  Ring.cpp  Ventana.cpp  srpits.cpp
